--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Gustavo Santarpia Torres</td>
+                                    <td>Willi M. Santana</td>
                                     <td>11 00000-0000</td>
-                                    <td>gustavo.torres@partners.srv.br</td>
+                                    <td>willi.santana@partners.srv.br</td>
                                 </tr>
 
                             </tbody>
@@ -102,9 +102,9 @@
                     <div class="card-default vendedores-bg">
 
                         <ul class="list-vendedores">
-                            <li>Vendedor Peças: Laís</li>
-                            <li>Vendedor Pneus: Ellen</li>
-                            <li>Vendedor Veículos: Juliana</li>
+                            <li>Vendedor Celulose: Fabio</li>
+                            <li>Vendedor Bens e Consumo: Vitória</li>
+                            <li>Gerência: Juliana</li>
                         </ul>
 
                     </div>
@@ -112,8 +112,8 @@
 
                     <div>
 
-                        <a class="btn-link">Peças</a>
-                        <a class="btn-link">Pneus</a>
+                        <a class="btn-link">Celulose</a>
+                        <a class="btn-link">Bens e Consumo</a>
 
                         <div class="tiles-colors">
                             <!-- Bloco 01 -->
