--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                     <img src="images/logo-mercedes.png" alt="">
                                     <p class="value-tile num-frota">250</p>
                                     <p class="lbl-frota">Mercedes-Benz</p>
-                                    <span> Frota </span>
+                                    <span> Produtos </span>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-3 col-xs-6">
@@ -228,7 +228,7 @@
 
                     <div class="bg-chart">
 
-                            <h3>Frota de Veículos</h3>
+                            <h3Produtos</h3>
                             <canvas id="myChart" height="168"></canvas>
     
                         </div>
