--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                             </div>
                             <div class="col-md-3 col-sm-3 col-xs-6">
                                 <div class="tile-box black-ag">
-                                    <img src="images/logo-mercedes.png" alt="">
+                                    <img src="https://www.corridasuzanofazbem.com.br/img/logo-suzano-header.png" alt="">
                                     <p class="value-tile num-frota">250</p>
-                                    <p class="lbl-frota">Mercedes-Benz</p>
+                                    <p class="lbl-frota">Suzano</p>
                                     <span> Produtos </span>
                                 </div>
                             </div>
